Prevent CDN caching

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>WebArtisans - Watermark para videos</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/app.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/WebArtisans-ES/watermark/master/css/app.css">
 </head>
 <body>
 <h1>Texto de prueba</h1>
